# designrepo

./: .dockerignore  .gitignore  Dockerfile  frontend-entrypoint.sh  pyproject.toml  rxconfig.py
.agent/rules/: stack.md
.github/workflows/: build-images.yml
alembic/: script.py.mako
alembic/versions/: 642264973502_.py  988833df64f7_add_ai_prompts.py
designrepo/: designrepo.py  models.py  settings.py  state.py
designrepo/components/: diagram_editor.py  diagram_list.py  preview.py  project_list.py  repository_list.py
helm/designrepo/: Chart.yaml  values.yaml
helm/designrepo/templates/: _helpers.tpl  backend-deployment.yaml  backend-env-configmap.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-env-configmap.yaml  frontend-nginx-configmap.yaml  frontend-service.yaml  secrets.yaml  serviceaccount.yaml
k8s/: README.md  argocd-application.yaml
k8s/base/: backend-deployment.yaml  backend-service.yaml  designrepo-config.yaml  designrepo-secrets.yaml  frontend-deployment.yaml  frontend-service.yaml  kustomization.yaml
k8s/overlays/development/: backend-env-patch.yaml  kustomization.yaml
k8s/overlays/production/: kustomization.yaml
