[project]
name = "designrepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.3.1",
    "httpx>=0.28.1",
    "openai>=2.14.0",
    "pendulum>=3.1.0",
    "psycopg2>=2.9.11",
    "reflex>=0.8.24.post1",
    "fastapi[standard]",
    "itsdangerous>=2.2.0",
]
